--- a/src/components/post-card.astro
+++ b/src/components/post-card.astro
@@ -1,8 +1,9 @@
 ---
+import { Image } from 'astro:assets';
 import type { CollectionEntry } from 'astro:content';
-import { Calendar, Clock } from 'lucide-preact';
-import { twJoin } from 'tailwind-merge';
-import Date from './date.astro';
+import { Calendar, Clock4 } from 'lucide-astro';
+import Separator from './ui/separator.astro';
+import Time from './ui/time.astro';
 
 type Props = { post: CollectionEntry<'posts'> };
 
@@ -13,21 +14,24 @@ const { remarkPluginFrontmatter } = await post.render();
 <a
   href={`/blog/${post.slug}`}
   aria-label={`${post.data.title}. ${post.data.description}`}
-  class={twJoin(
-    'group flex h-full flex-col gap-1 rounded-md bg-2 p-4 shadow',
-    'hover:bg-3 motion-safe:transition-colors',
-  )}
+  class="group flex h-full select-none flex-col overflow-hidden rounded border"
 >
-  <span class="group-hover:text-brand motion-safe:transition-colors">{post.data.title}</span>
-  <p class="text-xs font-1 text-2">{post.data.description}</p>
-  <div class="mt-auto flex items-center gap-6 pt-4 text-xs font-1 text-2">
-    <div class="flex items-center gap-2">
-      <Calendar class="h-4 w-4" aria-hidden />
-      <Date>{post.data.published}</Date>
-    </div>
-    <div class="flex items-center gap-2">
-      <Clock class="h-4 w-4" aria-hidden />
-      <span>{remarkPluginFrontmatter.readingTime} Min Read</span>
+  <div class="h-28 rounded-t opacity-40 group-hover:opacity-60 motion-safe:transition-opacity">
+    <Image src={post.data.cover} alt="Post Cover" class="rounded-t" width={2048} height={2048} />
+  </div>
+  <div class="z-20 flex flex-1 flex-col gap-2 border-t bg-1 p-4">
+    <span class="group-hover:text-emphasis motion-safe:transition-colors">{post.data.title}</span>
+    <p class="flex-1 text-xs text-2">{post.data.description}</p>
+    <Separator class="my-1.5" />
+    <div class="flex justify-between gap-4 text-xxs text-2">
+      <div class="flex items-center gap-2">
+        <Calendar class="shrink-0" size={14} aria-hidden />
+        <Time>{post.data.published}</Time>
+      </div>
+      <div class="flex items-center gap-2">
+        <Clock4 class="shrink-0" size={14} aria-hidden />
+        <span>{remarkPluginFrontmatter.readingTime} min read</span>
+      </div>
     </div>
   </div>
 </a>
