--- a/src/components/post-subheader.astro
+++ b/src/components/post-subheader.astro
@@ -1,21 +1,25 @@
 ---
-import { Link } from 'lucide-preact';
-import { twJoin } from 'tailwind-merge';
+import { Link } from 'lucide-astro';
+import Separator from './ui/separator.astro';
 
 const slot = await Astro.slots.render('default');
 const hash = slot.toLowerCase().replace(/ /g, '-');
 ---
 
-<h2 class="group relative mt-fluid-4">
+<div class="flex flex-col gap-2">
   <a
+    id={hash}
     href={`#${hash}`}
-    aria-label={slot}
-    class={twJoin(
-      'absolute left-[-30px] top-1/2 hidden -translate-y-1/2 pr-4',
-      'opacity-0 group-hover:opacity-100 focus-visible:opacity-100 lg:block',
-    )}
+    class="group max-w-max text-base hover:text-emphasis motion-safe:transition-colors"
   >
-    <Link class="h-5 w-5 stroke-brand" aria-hidden />
+    <h2 class="flex items-center gap-1 uppercase tracking-wider">
+      {slot}
+      <Link
+        size={14}
+        aria-hidden
+        class="opacity-0 group-hover:opacity-100 motion-safe:transition-opacity"
+      />
+    </h2>
   </a>
-  <span id={hash} class="text-brand text-xl">{slot}</span>
-</h2>
+  <Separator />
+</div>
