--- a/src/pages/career.astro
+++ b/src/pages/career.astro
@@ -1,7 +1,10 @@
 ---
-import Date from '@/components/date.astro';
+import Link from '@/components/ui/link.astro';
+import Separator from '@/components/ui/separator.astro';
+import Time from '@/components/ui/time.astro';
 import Layout from '@/layouts/layout.astro';
 import { getCollection } from 'astro:content';
+import { twJoin } from 'tailwind-merge';
 
 const roles = await getCollection('roles').then(async (roles) =>
   Promise.all(
@@ -16,41 +19,45 @@ const roles = await getCollection('roles').then(async (roles) =>
 ---
 
 <Layout title="Career | Christian Penrod">
-  <section class="mx-auto mt-fluid-3 flex max-w-screen-sm flex-col gap-fluid-2">
-    <h1 class="text-2xl">Career</h1>
-    <div class="flex flex-col gap-8">
+  <div class="mx-auto mt-fluid-5 max-w-screen-lg">
+    <section>
+      <h1 class="text-3xl font-bold tracking-widest">CAREER</h1>
+      <p class="max-w-prose text-xs text-2">Explore experience within the industry.</p>
+    </section>
+    <Separator class="mb-10 mt-4" />
+    <section class="flex max-w-prose flex-col gap-10">
       {
         roles.map(({ role, Content }) => (
-          <div class="rounded-md bg-2 p-6 shadow">
-            <h2 class="font-normal text-brand text-lg">{role.company}</h2>
-            <div class="font-1 text-2">
-              <Date>{role.start}</Date> - {role.end ? <Date>{role.end}</Date> : 'Present'}
+          <div class="rounded border">
+            <div class="flex flex-col justify-between border-b bg-2 px-4 py-2 sm:flex-row sm:items-center">
+              <Link href={role.link} class="uppercase tracking-wider">
+                {role.company}
+              </Link>
+              <div class="text-xxs text-2">
+                <Time>{role.start}</Time> - {role.end ? <Time>{role.end}</Time> : 'Present'}
+              </div>
             </div>
-            <div class="relative">
-              <div class="absolute bottom-1 top-5 w-2 rounded-md bg-brand opacity-30" />
-              <div data-role-content class="flex flex-col pl-6">
+            <div class="flex gap-4 p-6 !leading-relaxed">
+              <div role="none" class="w-2 shrink-0 rounded bg-3" />
+              <div
+                class={twJoin(
+                  // paragraphs
+                  '[&_p]:text-xs [&_p]:text-2',
+                  // headings
+                  '[&_h3:not(:first-of-type)]:mt-10 [&_h3]:relative [&_h3]:mb-2 [&_h3]:mt-6 [&_h3]:tracking-wider',
+                  // dots
+                  '[&_h3]:before:absolute [&_h3]:before:h-3 [&_h3]:before:w-3 [&_h3]:before:content-[""]',
+                  '[&_h3]:before:top-1/2 [&_h3]:before:rounded-full [&_h3]:before:bg-emphasis/60',
+                  '[&_h3:last-of-type]:before:bg-transparent [&_h3]:before:-left-[1.6rem] [&_h3]:before:-translate-y-1/2',
+                  '[&_h3:last-of-type]:before:border-2 [&_h3:last-of-type]:before:border-emphasis/60',
+                )}
+              >
                 <Content />
               </div>
             </div>
           </div>
         ))
       }
-    </div>
-  </section>
+    </section>
+  </div>
 </Layout>
-
-<style lang="scss">
-  [data-role-content] {
-    :global(p) {
-      @apply mt-3 max-w-[60ch] font-1 text-2 text-xs;
-    }
-
-    :global(h3) {
-      @apply relative mt-6 before:absolute before:-left-6 before:top-[50%]
-             before:h-[0.95rem] before:w-[0.95rem] before:translate-x-[-0.215rem]
-             before:translate-y-[-50%] before:rounded-full before:bg-brand before:content-['']
-             last-of-type:before:border-[0.2rem] last-of-type:before:border-brand
-             last-of-type:before:bg-transparent;
-    }
-  }
-</style>
