--- a/src/components/post-views.astro
+++ b/src/components/post-views.astro
@@ -7,9 +7,9 @@ type Props = { slug: CollectionEntry<'posts'>['slug'] };
 const { slug } = Astro.props;
 ---
 
-<div class="flex items-center gap-2 rounded border bg-2 px-2">
+<div class="flex items-center gap-2 rounded border bg-2 px-2 tracking-wider">
   <Eye class="shrink-0" size={14} aria-hidden />
-  <p><span data-post-views={slug}></span> Views</p>
+  <span data-post-views={slug}>000000</span>
 </div>
 
 <script define:vars={{ slug }}>
@@ -17,6 +17,6 @@ const { slug } = Astro.props;
     .then((res) => res.json())
     .then((views) => {
       const el = document.querySelector(`[data-post-views="${slug}"]`);
-      el.textContent = new Intl.NumberFormat('en-US').format(views);
+      el.textContent = views.padStart(6, '0');
     });
 </script>
