--- a/src/components/post-views.astro
+++ b/src/components/post-views.astro
@@ -13,10 +13,10 @@ const { slug } = Astro.props;
 </div>
 
 <script define:vars={{ slug }}>
-  fetch(`/api/view-post`, { method: 'PUT', body: JSON.stringify({ slug }) })
+  fetch('/blog/api', { method: 'PUT', body: JSON.stringify({ slug }) })
     .then((res) => res.json())
     .then((views) => {
       const el = document.querySelector(`[data-post-views="${slug}"]`);
-      el.textContent = views.padStart(6, '0');
+      el.textContent = views.toString().padStart(6, '0');
     });
 </script>
