--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -33,7 +33,11 @@ const { post, prev, next } = Astro.props;
 const { remarkPluginFrontmatter, headings, Content } = await post.render();
 ---
 
-<Layout title={post.data.title} description={post.data.description}>
+<Layout
+  title={post.data.title}
+  description={post.data.description}
+  og={`open-graph/src/content/posts/${post.slug}.png`}
+>
   <div class="mx-auto mt-fluid-5 max-w-screen-lg xl:grid xl:grid-cols-[1fr,17rem] xl:gap-16">
     <article class="mx-auto max-w-prose">
       <div class="flex flex-col gap-3">
