--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -4,7 +4,6 @@ import ogDefault from '@/assets/og.webp';
 import Link from '@/components/ui/link.astro';
 import Separator from '@/components/ui/separator.astro';
 import '@fontsource/inter';
-import { ViewTransitions } from 'astro:transitions';
 import { Home } from 'lucide-astro';
 import { twJoin } from 'tailwind-merge';
 
@@ -40,7 +39,6 @@ const {
     <link rel="icon" type="image/svg+xml" href={favicon.src} />
     <link rel="sitemap" href="/sitemap-index.xml" />
     <link href={new URL(Astro.url.pathname, Astro.site)} rel="canonical" />
-    <ViewTransitions />
   </head>
   <body class="p-4 text-sm">
     <div
@@ -60,7 +58,7 @@ const {
           </ul>
         </nav>
       </header>
-      <main class="mb-fluid-6 flex-1" transition:animate="fade"><slot /></main>
+      <main class="motion-safe:animate-fade-in mb-fluid-6 flex-1"><slot /></main>
       <footer class="mx-auto w-full max-w-screen-lg">
         <Separator />
         <div class="flex justify-between px-2 pt-4 text-xxs text-2">
