--- a/src/components/ui/moment.astro
+++ b/src/components/ui/moment.astro
@@ -13,6 +13,4 @@ const formatter = new Intl.DateTimeFormat('en-US', {
 });
 ---
 
-<time {...props} datetime={datetime.toISOString()}>
-  {formatter.format(datetime)}
-</time>
+<time {...props} datetime={datetime.toISOString()}>{formatter.format(datetime)}</time>
