--- a/src/components/post-card.astro
+++ b/src/components/post-card.astro
@@ -2,6 +2,7 @@
 import { Image } from 'astro:assets';
 import type { CollectionEntry } from 'astro:content';
 import { Calendar, Clock4 } from 'lucide-astro';
+import { twJoin } from 'tailwind-merge';
 import Moment from './ui/moment.astro';
 import Separator from './ui/separator.astro';
 
@@ -14,7 +15,10 @@ const { remarkPluginFrontmatter } = await post.render();
 <a
   href={`/blog/${post.slug}`}
   aria-label={`${post.data.title}. ${post.data.description}`}
-  class="group flex h-full select-none flex-col overflow-hidden rounded border"
+  class={twJoin(
+    'group flex h-full select-none flex-col overflow-hidden rounded border',
+    'focus-visible:outline-none focus-visible:ring-2',
+  )}
 >
   <div class="h-28 rounded-t opacity-40 group-hover:opacity-60 motion-safe:transition-opacity">
     <Image src={post.data.cover} alt="Post Cover" class="rounded-t" width={2048} height={2048} />
