--- a/src/components/post-subheader.astro
+++ b/src/components/post-subheader.astro
@@ -1,5 +1,6 @@
 ---
 import { Link } from 'lucide-astro';
+import { twJoin } from 'tailwind-merge';
 import Separator from './ui/separator.astro';
 
 const slot = await Astro.slots.render('default');
@@ -10,14 +11,20 @@ const hash = slot.toLowerCase().replace(/ /g, '-');
   <a
     id={hash}
     href={`#${hash}`}
-    class="group max-w-max text-base hover:text-emphasis motion-safe:transition-colors"
+    class={twJoin(
+      'group max-w-max rounded text-base motion-safe:transition-colors',
+      'hover:text-emphasis focus-visible:outline-none focus-visible:ring-2',
+    )}
   >
     <h2 class="flex items-center gap-1 uppercase tracking-wider">
       {slot}
       <Link
         size={14}
         aria-hidden
-        class="opacity-0 group-hover:opacity-100 motion-safe:transition-opacity"
+        class={twJoin(
+          'opacity-0 group-hover:opacity-100 group-focus-visible:opacity-100',
+          'motion-safe:transition-opacity',
+        )}
       />
     </h2>
   </a>
